--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>Supervisor</h2>
     <p>Monitors activity to identify project roadblocks</p>
     <div class="icon">
-      <img src="/images/icon-supervisor.svg">
+      <img src="/images/icon-supervisor.svg" alt="Supervisor icon">
     </div>
   </div>
   
@@ -40,7 +40,7 @@
     <h2>Team Builder</h2>
     <p>Scans our talent network to create the optimal team for your project</p>
     <div class="icon">
-      <img src="/images/icon-team-builder.svg">
+      <img src="/images/icon-team-builder.svg" alt="Team builder icon">
     </div>
   </div>
 
@@ -48,7 +48,7 @@
     <h2>Karma</h2>
     <p>Regularly evaluates our talent to ensure quality</p>
     <div class="icon">  
-      <img src="/images/icon-karma.svg">
+      <img src="/images/icon-karma.svg" alt="Karma icon">
     </div>
   </div>
   
@@ -56,7 +56,7 @@
     <h2>Calculator</h2>
     <p>Uses data from past projects to provide better delivery estimates</p>
     <div class="icon">
-      <img src="/images/icon-calculator.svg">
+      <img src="/images/icon-calculator.svg" alt="Calculator icon">
     </div>
   </div>
 
